--- a/src/css/dark-mode/variables.css
+++ b/src/css/dark-mode/variables.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --fill-white-from-black: {
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg)
       brightness(101%) contrast(103%);
@@ -8,7 +8,7 @@
     filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%)
       hue-rotate(288deg) brightness(101%) contrast(103%);
   }
-}
+} */
 
 body.grayscale-mode {
   --tg-text-color: #ffffff;
