--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,3 +9,11 @@ License:    GNU General Public License v2 or later
 */
 
 @import "./dark-mode/dark-mode.css";
+
+.entry-title a {
+  font-family: "DM Sans";
+}
+
+article p {
+  font-family: "DM Sans";
+}
